--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -1,27 +1,27 @@
 name: Run Python Script Every Minute
 
 on:
-  workflow_dispatch:  # Allows manual run
-  schedule:
-    - cron: '*/1 * * * *'  # Runs every minute
+  workflow_dispatch: # Allows manual run
+#  schedule:
+#    - cron: '*/1 * * * *'  # Runs every minute
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out the repo
-      uses: actions/checkout@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
 
-    - name: Run Python script
-      run: |
-        python script/fetchPrices.py
+      - name: Run Python script
+        run: |
+          python script/fetchPrices.py
