--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lucide-react": "^0.445.0",
     "mongodb": "^6.9.0",
     "next": "14.2.12",
-    "next-auth": "^5.0.0-beta.22",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
